their infrastructure. No Name Games has and will stay on top of the competi-
tion.
==================================CHANGELOG=================================
11/15/2025:
[+] Added Cluster Rush (Thanks for the suggestion!)
[+] Added People Playground (Thanks for the suggestion!)
[+] Added Super Mario World (Thanks for the suggestion!)

11/13/2025:
[+] Added Hollow Knight (Thanks for the suggestion Hudsyn ganey)

11/12/2025:
[+] Added Half-Life 1 (Thanks for the suggestion ThatOneAmerican!)
[+] Added Pokémon Black 2 (Thanks for the suggestion BubbaNator5000!)
[+] Added Pokémon White 2 (Thanks for the suggestion BubbaNator5000!)
[+] Added Slender: The Eight Pages (Thanks for the suggestion
enriqueeeeeeeee)
[+] I kinda realized the "Cooking Mama" game was misleading, so I changed 
the name and added the real Cooking Mama.

11/11/2025:
[+] Added Super Mario Bros. 1 & 3 (Thanks for the suggestion!)
[+] Added Spongebob's Truth or Square (Thanks for the suggestion!)
[+] Added Mario Paint (Thanks for the suggestion!)
[+] Added Pokémon FireRed (Thanks for the suggestion!)
[+] Added Papa's Wingeria (Thanks for the suggestion Kimmy J!)
[+] Added Nazi Zombies Portable (Thanks for the suggestion) [I suppose this
is what you mean by "Call of Duty Zombies Browser Edition"]
[+] Added Pokémon Emerald (I accidentally deleted the suggestion before
writing your name, sorry)
[+] Added a warning when trying to click my email (Please read it if you've
emailed me before)

11/10/2025:
[-] Okay looks like I'm changing my mind once again. The proxy has been
removed. Sorry.
[!] This experiment didn't work out the way I expected, so proxies might be
delayed for the future again.

11/09/2025:
[+] Alright it looks like I'm changing my mind. I added a proxy, but it may
be blocked for some people (if it is don't submit a bug report).
[!] Please, don't abuse the proxy!

11/07/2025:
[-] Removed Edubrain.ai due to it being blocked, may come back if I develop
a proxy.