@@ -24,6 +24,8 @@ tion.
 [+] Added Cluster Rush (Thanks for the suggestion!)
 [+] Added People Playground (Thanks for the suggestion!)
 [+] Added Super Mario World (Thanks for the suggestion!)
+[+] Added Steal a Brainrot (Thanks for the suggestion Hudsyn!)
+[+] Added Asteroids (Thanks for the suggestion Jacob!)
 
 11/13/2025:
 [+] Added Hollow Knight (Thanks for the suggestion Hudsyn ganey)
